@@ -1,3 +1,10 @@
+Tue Oct  8 16:11:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* array.c (rb_ary_uniq): use rb_hash_values(), as well as the case no
+	  block is given.
+
+	* internal.h: define rb_hash_values() as internal API.
+
 Tue Oct  8 13:53:21 2013  Masaki Matsushita  <glass.saga@gmail.com>
 
 	* array.c (rb_ary_uniq): use rb_hash_keys().
